--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -57,6 +57,7 @@
     padding: 0;
     line-height: 1.6;
     text-align: justify;
+    color: #ddd;
 
     @media (max-width: 767px) {
       text-align: left;
